--- a/roles/osp-setup/tasks/create-image.yml
+++ b/roles/osp-setup/tasks/create-image.yml
@@ -6,8 +6,8 @@
       - tested
 - name: Create openstack image
   os_image:
-     cloud: ospcloud
-     name: rhel-guest
+     cloud: "{{ osp_cloud_name }}"
+     name: "{{ os_image_name }}"
      container_format: bare
      disk_format: qcow2
      state: present
