--- a/roles/osp-setup/tasks/create-sg.yml
+++ b/roles/osp-setup/tasks/create-sg.yml
@@ -2,7 +2,7 @@
 # tasks file for osp.security
 - name: Create Security Group Apps
   os_security_group:
-    cloud: ospcloud
+    cloud: "{{ osp_cloud_name }}"
     state: present
     name: apps
     description: ports_open
@@ -10,10 +10,10 @@
 - name: Create Security Group Rule Apps
   os_security_group_rule:
     cloud: ospcloud
-    security_group: apps 
+    security_group: apps
     protocol: tcp
     port_range_min: "{{ item.port }}"
-    port_range_max: "{{ item.port }}" 
+    port_range_max: "{{ item.port }}"
     remote_ip_prefix: "{{ item.ip_prefix }}"
   with_items:
     - { port: '8080', ip_prefix: '0.0.0.0/0' }
@@ -21,38 +21,38 @@
 
 - name: Create Security Group Frontend
   os_security_group:
-    cloud: ospcloud
+    cloud: "{{ osp_cloud_name }}"
     state: present
     name: frontend
     description: ports_open
 
 - name: Create Security Group Rule Frontend
   os_security_group_rule:
-    cloud: ospcloud
-    security_group: frontend 
+    cloud: "{{ osp_cloud_name }}"
+    security_group: frontend
     protocol: tcp
     port_range_min: "{{ item.port }}"
-    port_range_max: "{{ item.port }}" 
+    port_range_max: "{{ item.port }}"
     remote_ip_prefix: "{{ item.ip_prefix }}"
   with_items:
     - { port: '80', ip_prefix: '0.0.0.0/0' }
     - { port: '443', ip_prefix: '0.0.0.0/0' }
     - { port: '22', ip_prefix: '0.0.0.0/0' }
-      
+
 - name: Create Security Group DB
   os_security_group:
-    cloud: ospcloud
+    cloud: "{{ osp_cloud_name }}"
     state: present
     name: db
     description: ports_open
 
 - name: Create Security Group Rule DB
   os_security_group_rule:
-    cloud: ospcloud
+    cloud: "{{ osp_cloud_name }}"
     security_group: db
     protocol: tcp
     port_range_min: "{{ item.port }}"
-    port_range_max: "{{ item.port }}" 
+    port_range_max: "{{ item.port }}"
     remote_ip_prefix: "{{ item.ip_prefix }}"
   with_items:
     - { port: '5432', ip_prefix: '20.20.20.0/24' }
