--- a/clouds.yaml
+++ b/clouds.yaml
@@ -1,7 +1,7 @@
 clouds:
   ospcloud:
     auth:
-      auth_url: http://192.168.0.20:5000/
+      auth_url: "{{ auth_url }}"
       password: r3dh4t1!
       project_name: admin
       username: admin
