--- a/osp_image.yml
+++ b/osp_image.yml
@@ -8,8 +8,8 @@
       dest: /root/rhel-guest-image-7.2-20151102.0.x86_64.qcow2
   - name: Load RHEL image into Glance
     os_image:
-      cloud: ospcloud
-      name: rhel-guest
+      cloud: "{{ osp_cloud_name }}"
+      name: "{{ os_image_name }}"
       container_format: bare
       disk_format: qcow2
       state: present
