--- a/roles/deploy_app_servers/tasks/main.yml
+++ b/roles/deploy_app_servers/tasks/main.yml
@@ -2,14 +2,18 @@
 
 - name: Create app1 server instance
   os_server:
-    cloud: ospcloud
+    cloud: "{{ osp_cloud_name }}"
     name: "app1"
-    image: "{{os_image_name}}"
+    image: "{{ os_image_name }}"
     meta: "group={{ webserver_group }},deployment_name={{ deployment }}"
     flavor: "{{ flavor_name }}"
-    security_groups: "{{sec_group}}"
+    security_groups: "{{ sec_group }}"
     key_name: ansible_ssh
     floating_ips: ext_network
+    auth:
+      auth_url: "{{ auth.auth_url }}"
+      username: "{{ auth.username }}"
+      admin: "{{ auth.admin }}"
     nics:
     - net-name: cloud-init
     - debug:
@@ -17,12 +21,12 @@
 
 - name: Create app2 server instance
   os_server:
-    cloud: ospcloud
+    cloud: "{{ osp_cloud_name }}"
     name: "app2"
     image: "{{os_image_name}}"
     meta: "group={{ webserver_group }},deployment_name={{ deployment }}"
     flavor: "{{ flavor_name }}"
-    security_groups: "{{sec_group}}"
+    security_groups: "{{ sec_group }}"
     key_name: ansible_ssh
     floating_ips: ext_network
     nics:
