--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory                   = inventory 
+inventory                   = osp_jumpbox_inventory
 
 [privilege_escalation]
 become                      = True
