--- a/inventory/group_vars/main.yml
+++ b/inventory/group_vars/main.yml
@@ -12,6 +12,9 @@ os_image_name: 'rhel-guest'
 #Name of OpenStack Cloud instance
 osp_cloud_name: 'ospcloud'
 
+#ProxyJump command used to connect from the bastion to the target systems
+ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q "{{ workstation }}""'
+
 osp_networks:
   # Public Facing Network
   external:
