--- a/roles/osp-setup/tasks/create-flavor.yml
+++ b/roles/osp-setup/tasks/create-flavor.yml
@@ -2,7 +2,7 @@
   os_nova_flavor:
      cloud: "{{ osp_cloud_name }}"
      state: present
-     name: m2.small
+     name: 'm2.small'
      ram: 2048
      vcpus: 1
      disk: 10
