--- a/roles/osp-setup/tasks/create-flavor.yml
+++ b/roles/osp-setup/tasks/create-flavor.yml
@@ -1,8 +1,8 @@
 - name: Create m2.small flavor
   os_nova_flavor:
-     cloud: "{{ osp_cloud_name }}"
-     state: present
-     name: 'm2.small'
-     ram: 2048
-     vcpus: 1
-     disk: 10
+     cloud: "{{ flavor_vars.Cloud }}"
+     state: "{{ flavor_vars.state }}"
+     name: "{{ flavor_vars.name }}"
+     ram: "{{ flavor_vars.ram }}"
+     vcpus: "{{ flavor_vars.vcpus }}"
+     disk: "{{ flavor_vars.disk }}"
