--- a/roles/osp-setup/tasks/main.yml
+++ b/roles/osp-setup/tasks/main.yml
@@ -2,7 +2,10 @@
 # tasks file for roles/osp-lab
 - include_tasks: create-image.yml
 - include_tasks: create-flavor.yml
-- include_tasks: create-keypair.yml
-- include_tasks: create-network.yml
-- include_tasks: create-sg.yml
-- include_tasks: deploy_servers.yml
+debug:
+  msg: 'test run success'
+
+#- include_tasks: create-keypair.yml
+#- include_tasks: create-network.yml
+#- include_tasks: create-sg.yml
+#- include_tasks: deploy_servers.yml
