--- a/roles/osp-setup/tasks/main.yml
+++ b/roles/osp-setup/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 # tasks file for roles/osp-lab
+-hosts: all
+  vars_files:
+    group_vars/all
 - include_tasks: create-image.yml
 - include_tasks: create-flavor.yml
 - debug:
