--- a/roles/osp-setup/tasks/main.yml
+++ b/roles/osp-setup/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 # tasks file for roles/osp-lab
-- include_vars:
-    file: inventory\group_vars\all\images
+#- include_vars:
+#    file: inventory\group_vars\all\images
 - include_tasks: create-image.yml
-    file: inventory\group_vars\all\flavors
+#    file: inventory\group_vars\all\flavors
 - include_tasks: create-flavor.yml
 - debug:
     msg: 'test run success'
