--- a/inventory/group_vars/all/flavors.yml
+++ b/inventory/group_vars/all/flavors.yml
@@ -1,6 +1,6 @@
 ---
 #variables created to define flavors associated with QA
-flavor_vars:
+flavor_vars: inventory\group_vars\all\flavors.yml
   name: 'm2.small'
   cloud: "{{ osp_cloud_name }}"
   state: present
