--- a/roles/osp-setup/tasks/create-flavor.yml
+++ b/roles/osp-setup/tasks/create-flavor.yml
@@ -1,5 +1,5 @@
 ---
-- import_playbook:
+- import_playbook: inventory\group_vars\all\images.yml
 - name: Create m2.small flavor
   os_nova_flavor:
      cloud: "{{ flavor_vars.Cloud }}"
