--- a/roles/osp-setup/tasks/create-image.yml
+++ b/roles/osp-setup/tasks/create-image.yml
@@ -1,5 +1,5 @@
 ---
-- import_playbook: inventory\group_vars\all\images.yml
+- import_playbook: images.yml
 - name: Download RHEL image
   get_url:
      url: "{{ image_vars.url }}"
