--- a/roles/osp-setup/tasks/main.yml
+++ b/roles/osp-setup/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: OSP deployment
-  host: localhost
+  hosts: localhost
 # tasks file for roles/osp-lab
 - include_vars: openstack.yaml
 #- include_vars:
