--- a/roles/create_image/tasks/main.yml
+++ b/roles/create_image/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - include_playbook: images.yml
-  get_url:
+- get_url:
      url: '"{{ image_vars.url }}"'
      dest: '"{{ image_vars.dest }}"'
   #tags: '"{{ image_vars.tags }}"'
