--- a/site-osp-setup.yml
+++ b/site-osp-setup.yml
@@ -1,6 +1,7 @@
 - hosts: workstation
   connection: local
-  roles:
+- name: create OS Image
+- include_vars: images.yml
+- roles:
    - create_image
    - create_flavor
-    
