--- a/site-osp-setup.yml
+++ b/site-osp-setup.yml
@@ -1,7 +1,9 @@
 - hosts: workstation
   connection: local
 - name: create OS Image
-- vars_files: images.yml
+- vars_files:
+    images.yml
+    flavors.yml
 - roles:
    - create_image
    - create_flavor
