--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,9 @@
 [defaults]
 inventory                   = ./osp_jumpbox_inventory
 
+[hosts]
+workstation
+
 [privilege_escalation]
 become                      = True
 become_method               = sudo
