--- a/roles/create_image/tasks/main.yml
+++ b/roles/create_image/tasks/main.yml
@@ -1,15 +1,17 @@
 ---
-hosts: all
-- get_url:
-     url: '"{{ image_vars.url }}"'
-     dest: '"{{ image_vars.dest }}"'
-     tags: '"{{ image_vars.tags }}"'
-     name: '"{{ image_vars.name }}"'
-- os_image:
-     cloud: '"{{ image_vars.os_image.cloud }}"'
-     name: '"{{ image_vars.os_image.name }}"'
-     container_format: '"{{ image_vars.os_image.container_format }}"'
-     disk_format: '"{{ image_vars.os_image.disk_format }}"'
-     state: '"{{ image_vars.os_image.state }}"'
-     filename: '"{{ image_vars.os_image.filename }}"'
-     tags: '"{{ image_vars.os_image.tags }}"'
+- Name: Create Operating System image for OSP
+  hosts: localhost
+  tasks:
+    get_url:
+        url: '"{{ image_vars.url }}"'
+        dest: '"{{ image_vars.dest }}"'
+        tags: '"{{ image_vars.tags }}"'
+        name: '"{{ image_vars.name }}"'
+    os_image:
+      cloud: '"{{ image_vars.os_image.cloud }}"'
+      name: '"{{ image_vars.os_image.name }}"'
+      container_format: '"{{ image_vars.os_image.container_format }}"'
+      disk_format: '"{{ image_vars.os_image.disk_format }}"'
+      state: '"{{ image_vars.os_image.state }}"'
+      filename: '"{{ image_vars.os_image.filename }}"'
+      tags: '"{{ image_vars.os_image.tags }}"'
