--- a/roles/create_image/tasks/main.yml
+++ b/roles/create_image/tasks/main.yml
@@ -7,9 +7,9 @@
     name: "{{ image_vars.name }}"
 - os_image:
     cloud: "{{ osp_cloud_name }}"
-    name: "{{ image_vars.os_image.name }}"
-    container_format: "{{ image_vars.os_image.container_format }}"
-    disk_format: "{{ image_vars.os_image.disk_format }}"
-    state: "{{ image_vars.os_image.state }}"
-    filename: "{{ image_vars.os_image.filename }}"
+    name: "{{ os_image.name }}"
+    container_format: "{{ os_image.container_format }}"
+    disk_format: "{{ os_image.disk_format }}"
+    state: "{{ os_image.state }}"
+    filename: "{{ os_image.filename }}"
     #tags: "{{ image_vars.os_image.tags }}"
