--- a/roles/create_flavor/tasks/main.yml
+++ b/roles/create_flavor/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-hosts: workstation
+- hosts: workstation
 - name: 'Create m2.small flavor'
   os_nova_flavor:
      cloud: "{{ all.main.osp_cloud_name }}"
